Created template for local form

--- a/lc/localform.html
+++ b/lc/localform.html
@@ -1,9 +1,11 @@
 <html>
-<head><title></title></head>
-  First name:<br>
-  <input type="text" name="firstname">
+<head><title>Local Form</title></head>
+  Name (optional):<br>
+  <input type="text" name="name">
   <br>
-  Last name:<br>
+  Location:<br>
+Latitude:<br>
+Longtitude:<br>
   <input type="text" name="lastname">
  <form>
   <input type="radio" name="sex" value="male" checked>Male
