Basic local coordinator form
Most basic version, needs additions on edit/delete front

--- a/lc/localform.html
+++ b/lc/localform.html
@@ -1,16 +1,62 @@
 <html>
 <head><title>Local Form</title></head>
   Name (optional):<br>
-  <input type="text" name="name">
+  <input type="text" name="Name">
   <br>
-  Location:<br>
-Latitude:<br>
-Longtitude:<br>
-  <input type="text" name="lastname">
+  <input type="text" name="Lastname">
+  <br>
+  
+Location:<br>
+  Latitude:<br>
+  <input type="text" name="Latitude">
+  <br>
+  Longtitude:<br>
+  <input type="text" name="Latitude">
+  <br>
+  
  <form>
-  <input type="radio" name="sex" value="male" checked>Male
+  <input type="radio" name="sex" value="Male" checked>Male
   <br>
-  <input type="radio" name="sex" value="female">Female
+  <input type="radio" name="sex" value="Female">Female
+  <br>
+  <input type="radio" name="sex" value="Neither/Other">Neither/Other
 </form> 
+
+Disability:<br>
+  <input type="text" name="Disability">
+  <br>
+
+Statement of problem/issue faced:<br>
+  <input type="text" name="Problem faced" size="35">
+  <br>
+
+Problem Classification:<br><!--Might want to modify to be more specific to the ADD infographic - 4, 8, 10, 11, 17-->
+  <select name="UN Goals">
+    <option value="Poverty">Poverty</option>
+    <option value="Hunger">Hunger</option>
+    <option value="Health & Well-being">Healthcare</option>
+    <option value="Education">Education</option>
+    <option value="Gender Equality">Gender</option>
+    <option value="Clean water and Sanitation">Water</option>
+    <option value="Affordable & Clean energy">Energy</option>
+    <option value="Work & Economic growth">Work</option>
+    <option value="Industry & Infrastructure">Infrastructure</option>
+    <option value="Inequalities">Inequalities</option><!--This looks too vague. Mapped from 'Reduced Inequalities'--> 
+    <option value="Sustainable cities/communities">Sustainability</option>
+    <option value="Responsible Consumption & Production">Responsibility</option>
+</select>
+<br>
+
+Resolution of problem/aid dispatched:<br>
+ <br>
+
+ 
+
+
+
+Comments:<br>
+  <input type="text" name="Comments">
+  <br>
+ 
 
 </html>
