--- a/lc/localform.html
+++ b/lc/localform.html
@@ -1,5 +1,8 @@
 <html>
 <head><title>Local Form</title></head>
+
+<form action="action_page.php" method="post">
+
   Name (optional):<br>
   <input type="text" name="Name">
   <br>
@@ -32,18 +35,18 @@ Statement of problem/issue faced:<br>
 
 Problem Classification:<br><!--Might want to modify to be more specific to the ADD infographic - 4, 8, 10, 11, 17-->
   <select name="UN Goals">
-    <option value="1 - Poverty">Poverty</option>
-    <option value="2 - Hunger">Hunger</option>
-    <option value="3 - Health & Well-being">Healthcare</option>
-    <option value="4 - Education">Education</option>
-    <option value="5 - Gender Equality">Gender</option>
-    <option value="6 - Clean water and Sanitation">Water</option>
-    <option value="7 - Affordable & Clean energy">Energy</option>
-    <option value="8 - Work & Economic growth">Work</option>
-    <option value="9 - Industry & Infrastructure">Infrastructure</option>
-    <option value="10 - Inequalities">Inequalities</option><!--This looks too vague. Mapped from 'Reduced Inequalities'--> 
-    <option value="11 - Sustainable cities/communities">Sustainability</option>
-    <option value="12 - Responsible Consumption & Production">Responsibility</option><!--irrelevant to disability..?-->
+    <option value="1">Poverty</option>
+    <option value="2">Hunger</option>
+    <option value="3">Healthcare</option>
+    <option value="4">Education</option>
+    <option value="5">Gender Equality</option>
+    <option value="6">Clean water and Sanitation</option>
+    <option value="7">Affordable & Clean energy</option>
+    <option value="8">Work & Economic growth</option>
+    <option value="9">Industry & Infrastructure</option>
+    <option value="10">Inequalities</option><!--This looks too vague. Mapped from 'Reduced Inequalities'--> 
+    <option value="11">Sustainable cities/communities</option>
+    <option value="12">Responsible Consumption & Production</option><!--irrelevant to disability..?-->
 </select>
 <br>
 
@@ -52,17 +55,14 @@ Resolution of problem/aid dispatched:<br>
   <input type="radio" name="aid" value="Yes" checked>Yes
   <br>
   <input type="radio" name="aid" value="No">No
-  <br>
-  <input type="radio" name="aid" value="No">No
  <br>
-
- 
-
-
 
 Comments:<br>
   <input type="text" name="Comments">
   <br>
  
+<br><br>
+<input type="submit" value="Submit">
 
+</form>
 </html>
